# pypolicy

./: .gitignore  LICENSE  codegen.py  disasm.py  dsl_method.py  parse.py  policy.lark  pypolicy.py  pyproject.toml  readonly.py  repl.py  requirements.txt  stdlib.py  vm.py
src/pypolicy/: cli.py  codegen.py  disasm.py  dsl_method.py  parse.py  policy.lark  repl.py  serde.py  stdlib.py  vm.py
tests/: conftest.py  test.pp  test_compare.py  test_control_flow.py  test_expr.py  test_list_dict.py  test_serde_roudtrip.py  test_string_methods.py
